--- a/abe.conf
+++ b/abe.conf
@@ -44,7 +44,7 @@
 # ODBC examples.  Don't use the same schema via ODBC and non-ODBC!
 #dbtype = pyodbc
 #connect-args = DSN=Abe;PWD=B!tc0iN;
-#connect-args = DRIVER={ORACLE};DB=ORCL;UID=abe;PWD=Bitcoin;
+#connect-args = DRIVER={ORACLE};DB=ORCL;UID=abe;PWD=Dagra;
 #connect-args = DRIVER={PostgreSQL ANSI};Database=abe;
 
 # Workaround for ODBC drivers that begin in autocommit mode:
@@ -113,7 +113,7 @@
 #           ...]
 
 # The most important parameter is "dirname" and is the filesystem
-# directory containing your bitcoin.conf file.  (Bitcoind can use a
+# directory containing your dagra.conf file.  (Dagrad can use a
 # non-default directory if you pass it -datadir=<dirname>.)
 
 # Besides "dirname", most coins need the "chain" parameter, which is
@@ -134,9 +134,9 @@
 # New coins typically need a new "address_version", see doc/FAQ.html.
 
 #datadir += [{
-#        "dirname": "/home/bitcoin/.bitcoin",
+#        "dirname": "/home/dagra/.dagra",
 #        "loader": "rpc",    # See the comments for default-loader below.
-#        "chain": "Bitcoin"
+#        "chain": "Dagra"
 #      }]
 #datadir += [{
 #        "dirname": "/home/jtobey/.novacoin",
@@ -164,7 +164,7 @@
 
 # ignore-bit8-chains: list of chains for which block version bit 8 does
 # NOT indicate a Namecoin-style merge-mined auxiliary proof-of-work.
-#ignore-bit8-chains = ["Bitcoin", "Testnet"]
+#ignore-bit8-chains = ["Dagra", "Testnet"]
 
 # Set binary-type=hex if you want to store binary data (hashes,
 # scripts, keys, etc.) as hexadecimal strings regardless of the
@@ -212,8 +212,8 @@
 #    "DONATIONS_BTC": "1PWC7PNHL1SgvZaN7xEtygenKjWobWsCuf",
 #    "DONATIONS_NMC": "NJ3MSELK1cWnqUa6xhF2wUYAnz3RSrWXcK"
 #}
-#template_vars += { "DONATIONS_BTC": "1YourBitcoinAddressHere" }
-#template_vars += { "HOMEPAGE": "chain/Bitcoin" }
+#template_vars += { "DONATIONS_BTC": "1YourDagraAddressHere" }
+#template_vars += { "HOMEPAGE": "chain/Dagra" }
 #template = "
 #<!DOCTYPE html>
 #<html lang=\"en\">
@@ -310,21 +310,21 @@
 
 # Use default-loader=blkfile to force Abe to load data by scanning
 # blockfiles.  Use default-loader=rpc to force the use of RPC
-# with a running bitcoind (or *coin daemon).  This requires:
+# with a running dagrad (or *coin daemon).  This requires:
 #
-#     * A readable bitcoin.conf with the RPC username and password
+#     * A readable dagra.conf with the RPC username and password
 #
-#     * HTTP access to bitcoind (SSL is not yet supported.)
+#     * HTTP access to dagrad (SSL is not yet supported.)
 #
-#     * Bitcoin 0.8 or newer with the -txindex option.  (Run bitcoind
+#     * Dagra 0.8 or newer with the -txindex option.  (Run dagrad
 #       once with -reindex if you previously ran it without -txindex.)
 #
-#     * A "datadir" option with "chain":"Bitcoin" (or other chain
+#     * A "datadir" option with "chain":"Dagra" (or other chain
 #       name)
 #
 #     * The "import-tx" option specifying the genesis transaction, if
 #       "bitcoid getrawtransaction" does not return it and it is not
-#       in Abe/genesis_tx.py.  (Bitcoin's genesis transaction is in
+#       in Abe/genesis_tx.py.  (Dagra's genesis transaction is in
 #       Abe/genesis_tx.py.  Otherwise, it requires manually parsing
 #       the first blockfile or running once in blkfile mode and
 #       finding the "genesis tx" in Abe's output.)
