--- a/abe.conf
+++ b/abe.conf
@@ -113,7 +113,7 @@
 #           ...]
 
 # The most important parameter is "dirname" and is the filesystem
-# directory containing your dagra.conf file.  (Dagrad can use a
+# directory containing your dowin.conf file.  (Dagrad can use a
 # non-default directory if you pass it -datadir=<dirname>.)
 
 # Besides "dirname", most coins need the "chain" parameter, which is
@@ -134,7 +134,7 @@
 # New coins typically need a new "address_version", see doc/FAQ.html.
 
 #datadir += [{
-#        "dirname": "/home/dagra/.dagra",
+#        "dirname": "/home/dowin/.dowin",
 #        "loader": "rpc",    # See the comments for default-loader below.
 #        "chain": "Dagra"
 #      }]
@@ -310,13 +310,13 @@
 
 # Use default-loader=blkfile to force Abe to load data by scanning
 # blockfiles.  Use default-loader=rpc to force the use of RPC
-# with a running dagrad (or *coin daemon).  This requires:
+# with a running dowind (or *coin daemon).  This requires:
 #
-#     * A readable dagra.conf with the RPC username and password
+#     * A readable dowin.conf with the RPC username and password
 #
-#     * HTTP access to dagrad (SSL is not yet supported.)
+#     * HTTP access to dowind (SSL is not yet supported.)
 #
-#     * Dagra 0.8 or newer with the -txindex option.  (Run dagrad
+#     * Dagra 0.8 or newer with the -txindex option.  (Run dowind
 #       once with -reindex if you previously ran it without -txindex.)
 #
 #     * A "datadir" option with "chain":"Dagra" (or other chain
