--- a/abe.conf
+++ b/abe.conf
@@ -335,3 +335,11 @@
 # entry takes precedence over "default-loader".
 #
 #default-loader = default
+
+default-loader = blkfile
+dbtype MySQLdb
+connect-args {"user":"abe","db":"abe","passwd":"abe123"}
+upgrade
+port 2750
+host localhost
+datadir = /root/.dowin
